[project]
name = "comfyui-voice-clone"
description = "Custom TTS node that clones voice from a reference audio and speaks entered text."
version = "1.0.1"
license = "Apache License, Version 2.0"
dependencies = ["librosa>=0.11.0", "conformer>=0.1.0", "perth>=1.0.0", "resemble-perth>=1.0.1", "resampy>=0.4.3"]

[project.urls]
Repository = "https://github.com/Sean-Bradley/ComfyUI-Voice-Clone"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Sean-Bradley/ComfyUI-Voice-Clone/wiki"
"Bug Tracker" = "https://github.com/Sean-Bradley/ComfyUI-Voice-Clone/issues"

[tool.comfy]
PublisherId = "sbcode"
DisplayName = "ComfyUI Voice Clone"
Icon = "https://avatars.githubusercontent.com/u/59069470"
